force-app/main/default/objects/PBS_Leasing_Dynamic_Datatable_Column__mdt/PBS_Leasing_Dynamic_Datatable_Column__mdt.object-meta.xml
<CustomObject>
    <label>Dynamic Datatable	Column</label>
    <pluralLabel>Dynamic Datatable	Columns</pluralLabel>
</CustomObject>