force-app/main/default/objects/PBS_Leasing_Dynamic_Datatable_Column__mdt/fields/Initial_Width__c.field-meta.xml
<CustomField>
    <fullName>Initial_Width__c</fullName>
    <label>Initial Width</label>
    <length>80</length>
    <type>Text</type>
</CustomField>