force-app/main/default/objects/PBS_Leasing_Dynamic_Datatable_Column__mdt/fields/PBS_Leasing_Dynamic_Datatable__c.field-meta.xml
<CustomField>
    <fullName>PBS_Leasing_Dynamic_Datatable__c</fullName>
    <label>Dynamic Datatable</label>
    <referenceTo>PBS_Leasing_Dynamic_Datatable__mdt</referenceTo>
    <relationshipLabel>Dynamic Datatable	Column s</relationshipLabel>
    <relationshipName>Dynamic_Datatable_Column_s</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>