force-app/main/default/objects/PBS_Leasing_Dynamic_Datatable_Column__mdt/fields/PBS_Leasing_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PBS_Leasing_Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>