force-app/main/default/objects/PBS_Leasing_Dynamic_Datatable_Column__mdt/fields/PBS_Leasing_Order__c.field-meta.xml
<CustomField>
    <fullName>PBS_Leasing_Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>