force-app/main/default/objects/PBS_Leasing_Dynamic_Datatable_Column__mdt/fields/PBS_Leasing_Type__c.field-meta.xml
<CustomField>
    <fullName>PBS_Leasing_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>text</label>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>button</fullName>
            </value>
            <value>
                <fullName>currency</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>datetime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>